# lab2-project-management

./: .dockerignore  .gitignore  CMakeCache.txt  CMakeLists.txt  CURSOR_TASKS.md  Dockerfile  README.md  conanfile.txt  data.js  docker-compose.yaml  docker-compose.yml  openapi.yml  queries.js  schema_design.md  validation.js
docs/: optimization.md
mongodb/: README.md
sql/: data.sql  queries.sql  schema.sql
src/: main.cpp
src/database/: DatabaseManager.cpp  DatabaseManager.h  MongoDBManager.cpp  MongoDBManager.h
src/handlers/: AuthHandler.cpp  AuthHandler.h  ProjectHandler.cpp  ProjectHandler.h  RouterFactory.cpp  RouterFactory.h  TaskHandler.cpp  TaskHandler.h  UserHandler.cpp  UserHandler.h
src/handlers/middleware/: AuthMiddleware.h
src/models/: Project.h  Role.h  Task.h  User.h
src/models/dto/: CreateProjectRequest.h  CreateProjectResponse.h  CreateTaskRequest.h  CreateTaskResponse.h  CreateUserRequest.h  CreateUserResponse.h  ErrorResponse.h  LoginRequest.h  LoginResponse.h
src/storage/: Storage.cpp  Storage.h
src/utils/: JsonHelper.h
tests/: test_api.ps1
